--- a/portfolio.html
+++ b/portfolio.html
@@ -24,7 +24,7 @@
             </div>
             <br>
             <div class="btn-group" role="group" aria-label="...">
-                <button type="button" class="btn btn-default" ><a href="about.html">Le Joanne</a></button>
+                <button type="button" class="btn btn-default" ><a href="index.html">Le Joanne</a></button>
                 <button type="button" class="btn btn-default"><a href="portfolio.html">Le Portfolio</a></button>
                 <button type="button" class="btn btn-default"><a href="contact.html">Le Contact</a></button>
             </div>  
