--- a/portfolio.html
+++ b/portfolio.html
@@ -37,7 +37,7 @@
             <div class= "col-sm-4">
             <img src="assets/images/blueflowerbottom.jpg" alt "blueflowerbottom" width="150" height="auto">
                 <div class= "textBlock">
-                <hw4><a href="https://joannelee1990.github.io/Psychic-Game/" class="projectImg">Pyschic Game</a></hw4>
+                <hw4><a href="https://joannelee1990.github.io/Psychic-Game/" class="projectImg">Psychic Game</a></hw4>
                 </div>
             </div> 
 
